--- a/locale/zh/index.json
+++ b/locale/zh/index.json
@@ -117,6 +117,16 @@
     "privacy": "隐私政策",
     "connect": "关注我们",
     "copyright": "© 2023 MoodWheel. 保留所有权利。"
+  },
+  "seo": {
+    "title": "情商轮盘：理解、表达和管理情绪 | 情绪健康应用",
+    "description": "探索情商轮盘，这款应用通过互动式情绪轮盘、日记和分析工具帮助您探索自身感受。即刻开启您的情绪成长之旅。",
+    "keywords": "情绪轮盘, 情绪追踪, 情商, 心理健康, 自我关怀, 感受日记, 情绪管理"
+  },
+  "seo": {
+    "title": "情商轮盘：理解、表达和管理情绪 | 情绪健康应用",
+    "description": "探索情商轮盘，这款应用通过互动式情绪轮盘、日记和分析工具帮助您探索自身感受。即刻开启您的情绪成长之旅。",
+    "keywords": "情绪轮盘, 情绪追踪, 情商, 心理健康, 自我关怀, 感受日记, 情绪管理"
   }
 }
 
