--- a/locale/en/index.json
+++ b/locale/en/index.json
@@ -117,6 +117,11 @@
     "privacy": "Privacy Policy",
     "connect": "Follow Us",
     "copyright": "© 2023 MoodWheel. All rights reserved."
+  },
+  "seo": {
+    "title": "MoodWheel: Understand, Express & Manage Emotions | Emotional Wellness App",
+    "description": "Discover MoodWheel, the app that helps you explore your feelings with an interactive emotion wheel, journal, and analysis tools. Start your journey to emotional growth.",
+    "keywords": "emotion wheel, mood tracker, emotional intelligence, mental wellness, self-care, feeling journal, emotion management"
   }
 }
 
